commented out sri, added google fonts Fixed resultant bug on blog h3's being too large

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Source+Sans+Pro&display=swap");
 hr {
   color: #47ff4e;
   margin: 5px 10px;
@@ -5,15 +6,17 @@ hr {
 }
 
 body {
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Source Code Pro", monospace;
   text-transform: capitalize;
   font-variant: small-caps;
   font-weight: bold;
   color: #47ff4e;
 }
 body p {
+  font-family: "Source Sans Pro", sans-serif;
   text-transform: none;
   font-variant: normal;
+  font-weight: normal;
 }
 
 a, a:visited {
@@ -22,6 +25,11 @@ a, a:visited {
 
 a:hover {
   color: #b8336a;
+}
+
+::selection {
+  background: #b8336a;
+  color: #333745;
 }
 
 html {
@@ -114,7 +122,7 @@ body {
   background-color: #47ff4e;
   display: block;
   text-decoration: underline;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Source Code Pro", monospace;
   text-transform: capitalize;
   font-variant: small-caps;
   font-weight: bold;
@@ -216,7 +224,7 @@ nav li a:hover {
   background-color: #47ff4e;
   display: block;
   text-decoration: underline;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Source Code Pro", monospace;
   text-transform: capitalize;
   font-variant: small-caps;
   font-weight: bold;
@@ -391,7 +399,7 @@ footer p {
   background-color: #47ff4e;
   display: block;
   text-decoration: underline;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Source Code Pro", monospace;
   text-transform: capitalize;
   font-variant: small-caps;
   font-weight: bold;
@@ -445,7 +453,7 @@ footer p {
   border: none;
   width: 100px;
   height: 25px;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Source Code Pro", monospace;
   text-transform: capitalize;
   font-variant: small-caps;
   font-weight: bold;
@@ -562,6 +570,7 @@ footer p {
 }
 #blog .content .nav-array .nav-array-item h3 {
   font-size: 20px;
+  line-height: 20px;
   margin-top: 0px;
 }
 #blog .content .nav-array .nav-array-item hr {
@@ -579,7 +588,7 @@ footer p {
   background-color: #47ff4e;
   display: block;
   text-decoration: underline;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Source Code Pro", monospace;
   text-transform: capitalize;
   font-variant: small-caps;
   font-weight: bold;
